Added signup slides

--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
         </section>
         <section data-markdown data-background="node2016.png">
         <script type-"text/teplate">
+        </script>
+        </section>
+        <section data-markdown data-background="node2016.png">
+        <script type-"text/teplate">
+          ##Sign up on bluemix.net and look for IBM Graph
+          <img src="Graph-Catalog">
+        </script>
+        </section>
+        <section data-markdown data-background="node2016.png">
+        <script type-"text/teplate">
+          ##Create an instance
+          <img src="Graph-standard">
+        </script>
+        </section>
+        <section data-markdown data-background="node2016.png">
+        <script type-"text/teplate">
           ##Init session
           <pre>
             <code data-trim data-noescape>
