--- a/index.html
+++ b/index.html
@@ -36,18 +36,14 @@
         </section>
         <section data-markdown data-background="node2016.png">
         <script type-"text/teplate">
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
           ##Sign up on bluemix.net and look for IBM Graph
-          <img src="Graph-Catalog">
+          <img data-src="Graph-Catalog.png">
         </script>
         </section>
         <section data-markdown data-background="node2016.png">
         <script type-"text/teplate">
           ##Create an instance
-          <img src="Graph-standard">
+          <img data-src="Graph-standard.png">
         </script>
         </section>
         <section data-markdown data-background="node2016.png">
