--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Alaa Mahmoud's presentations</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/moon.css">
@@ -24,180 +24,11 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-          ##ibm-graph-client
-          https://www.npmjs.com/package/ibm-graph-client
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-          ##Sign up on bluemix.net and look for IBM Graph
-          <img data-src="Graph-Catalog.png">
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-          ##Create an instance
-          <img data-src="Graph-standard.png">
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-          ##Init session
-          <pre>
-            <code data-trim data-noescape>
-            # Change the credentials to reflect your `apiURL`, `username`, and `password` and test the code in your instance.
-{
-  "credentials": {
-    "apiURL": "https://ibmgraph-alpha.ng.bluemix.net/a261eac3-6956-4185-a789-8e24c475e89b/g",
-    "username": "575fd2b0-c011-4b94-82cf-43244b44f3a8",
-    "password": "aca0d011-26f5-485d-a446-182750278a27"
-  }
-};
-var ibmGraph= require('ibm-graph-client');
-var g = new ibmGraph(instance.credentials);
-g.session(function(err, data) {
-  if (err) {
-    console.log(err);
-  } else {
-    g.config.session = data;
-    console.log("Your session token is " + data);
-  }
-});
-            </code>
-          </pre>
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-          ##Create a graph
-          <pre>
-            <code data-trim data-noescape>
-            var graph; // graph name
-g.graphs().create(function(err, data){
-  if (err) {
-    console.log("Something went wrong: ");
-    console.log(err);
-  } else {
-    graph = data.graphId;
-    console.log('Graph created: ' + data.graphId);
-  }
-});
-            </code>
-          </pre>
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-          ##Get all graphs 
-          <pre>
-            <code data-trim data-noescape>
-g.graphs().get(function(err, data){
-  if (err) {
-    console.log(err);
-  }
-  console.log(data);
-});
-            </code>
-          </pre>
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-          ##Define a schema
-          <pre>
-            <code data-trim data-noescape>
-var schema = {
-  "propertyKeys": [
-    {"name": "name", "dataType": "String", "cardinality": "SINGLE"},
-  ],
-  "vertexLabels": [
-    {"name": "person"},
-  ],
-  "edgeLabels": [
-    {"name": "tweets", "multiplicity": "MULTI"},
-  ],
-  "vertexIndexes": [
-    {"name": "vByName", "propertyKeys": ["name"], "composite": true, "unique": true},
-  ],
-  "edgeIndexes" :[
-    {"name": "eByTime", "propertyKeys": ["time"], "composite": true, "unique": false}
-  ]
-}
-            </code>
-          </pre>
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-          ##Add a schema
-          <pre>
-            <code data-trim data-noescape>
-#Point your config to the new graph you just created
-g.config.url = g.config.url.substr(0, g.config.url.lastIndexOf('/') + 1) + graph;
-g.schema().set(schema, function(err, data){
-  if (err) {
-    console.log(err);
-  }
-  console.log(JSON.stringify(data));
-});
-            </code>
-          </pre>
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-          ##Create some vertexes and edges
-          <pre>
-            <code data-trim data-noescape>
-gremlin = {
-  gremlin: "\
-  def david =  graph.addVertex(T.label, 'person', 'name', 'David', 'verified', false);\
-  def browniesTweet = graph.addVertex(T.label, 'tweet', 'tweet', 'I love brownies #baking @Joseph', 'sentiment', 'loving', 'tone', 'excited');\
-  david.addEdge('tweets', browniesTweet);\
-  browniesTweet.addEdge('hashes', bakingHashtag);\
-  browniesTweet.addEdge('mentions', joseph);\
-  ",
-  bindings: {}
-}
-g.gremlin(gremlin, function(err,data){
-  if (err) {
-    console.log(err);
-  }
-  console.log(JSON.stringify(data));
-});
-            </code>
-          </pre>
-        </script>
-        </section>
-        <section data-markdown data-background="node2016.png">
-        <script type-"text/teplate">
-          ##Query the graph
-          <pre>
-            <code data-trim data-noescape>
-            				<section data-markdown>
-gremlin = {
-  "gremlin": "graph.traversal().V().hasLabel('person').has('name', name).outE('favorites').inV();",
-  "bindings": { "name": "Kamal" }
-}
-g.gremlin(gremlin, function(err,data){
-  if (err) {
-    console.log('Error: ' + err);
-  }
-  console.log(JSON.stringify(data));
-});
-            </code>
-          </pre>
-        </script>
+        <section>
+          <a href="node2016.html">Node Interactive 2016 - Using ibm-graph-client module</a>
         </section>
 			</div>
 		</div>
-
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
@@ -211,8 +42,8 @@ g.gremlin(gremlin, function(err,data){
           // next slide, disabled when set to 0, this value can be overwritten
           // by using a data-autoslide attribute on your slides
 
-          // autoSlide: 3000,
-          // loop: true,
+          autoSlide: 5000,
+          loop: true,
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
